data/derived/comb/progs/unify/prog0125.ml.out
Characters 40-41:
  let _ = pipe [fun x -> x; fun x -> x*x] 3;;
                                          ^
Error: This expression has type int but an expression was expected of type
         int -> int
